<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Pom1Activity" >

     <item
        android:id="@+id/keyboard"
        android:orderInCategory="0"
        android:showAsAction="always|withText"
        android:title="Hide Keyboard"/>
        
    <item
        android:id="@+id/reset"
        android:title="@string/reset"/>
    <item
        android:id="@+id/hard_reset"
        android:title="@string/hard_reset"/>
    <item
        android:id="@+id/load_memory"
        android:title="@string/load_memory"/>
    <item
        android:id="@+id/save_memory"
        android:title="@string/save_memory"/>
    <item
        android:id="@+id/about"
        android:title="@string/about"/>
    <item
        android:id="@+id/quit"
        android:title="@string/quit"/>

</menu>